--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
+.body-bg{
+  background-color: rgb(253, 242, 204);
+}
 .search-field {
   border: none;
   border-radius: 50px;
@@ -12,19 +15,7 @@ body {
   outline: none;
   border: none;
 }
-.search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
-  border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
-}
-.search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
-}
+
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -36,13 +27,19 @@ body {
   justify-content: center;
 }
 .single-product {
+  margin: 2px;
+  background-color: rgb(168, 215, 238);
+  border: 1px solid rgb(68, 2, 2);
+  border-radius: 10px;
   padding: 10px;
   transition: 0.6s;
+  height: 500px;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
   border: 1px solid cyan;
+  background-color: rgb(157, 241, 117);
 }
 .product-image {
   width: 150px;
@@ -50,12 +47,13 @@ body {
 }
 .cart {
   width: 350px;
-  /* border: 1px solid green; */
+  border: 1px solid green;
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
+  background-color: rgb(250, 209, 147);
 }
 .cart-main {
   padding-right: 30px;
